--- a/wp-content/plugins/happy-elementor-addons/changelog.txt
+++ b/wp-content/plugins/happy-elementor-addons/changelog.txt
@@ -1,3 +1,7 @@
+= 2.22.1 - 24 March 2021 =
+
+- Fix: Elementor compatibility tag added
+
 = 2.22.0 - 16 March 2021 =
 
 - New: Image Hover Effect Widget
